--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-%prod.quarkus.http.port=9090
+%prod.quarkus.http.port=8181
+quarkus.http.port=8081
 
 # FHIR R5 Server configuration - PROD
 %prod.org.quarkus.irccs.fhir-server=http://fhir:8080/fhir
 %prod.org.quarkus.irccs.query.limit=100
 
 # FHIR R5 Server configuration - DEV
-org.quarkus.irccs.fhir-server=${quarkus.base-url}:${quarkus.hapi.devservices.port:60586}/fhir
+org.quarkus.irccs.fhir-server=${hapi.base-url}:9090/fhir
 org.quarkus.irccs.query.limit=100
 
 # Index Dependencies needed for I3-COMMON library
@@ -23,12 +24,15 @@ quarkus.ssl.native=true
 %prod.keycloak-port=9445
 %prod.keycloak-domain=http://10.99.88.146
 
+
+hapi.base-url=http://localhost
+
 # Keycloak Variables - DEV
-keycloak-port=${kc.admin.port.test:45180}
-keycloak-domain=${quarkus.base-url}
+keycloak-port=9445
+keycloak-domain=${hapi.base-url}
+
 
 # Variables
-quarkus.base-url=http://localhost
 keycloak-url=${keycloak-domain}:${keycloak-port}
 keycloak-client_id=irccs
 keycloak-client_secret=cwvB6qAn5iFl7pa9r04WxkordJyy3tjS
@@ -50,9 +54,10 @@ quarkus.keycloak.admin-client.grant-type=password
 quarkus.keycloak.devservices.port=${kc.admin.port.test:45180}
 quarkus.keycloak.devservices.realm-path=pascale-realm.json
 quarkus.devservices.timeout=10m
+quarkus.devservices.enabled=false
 
 # Keycloak OIDC Connection
-%prod.quarkus.oidc.auth-server-url=${keycloak-url}/realms/${keycloak-realm}
+quarkus.oidc.auth-server-url=${keycloak-url}/realms/${keycloak-realm}
 quarkus.oidc.token.issuer=${keycloak-url}/realms/${keycloak-realm}
 quarkus.oidc.client-id=${keycloak-client_id}
 quarkus.oidc.credentials.secret=${keycloak-client_secret}
@@ -68,6 +73,21 @@ quarkus.keycloak.policy-enforcer.paths.0.enforcement-mode=DISABLED
 quarkus.keycloak.policy-enforcer.paths.1.enforcement-mode=DISABLED
 quarkus.keycloak.policy-enforcer.paths.2.enforcement-mode=DISABLED
 quarkus.keycloak.policy-enforcer.http-method-as-scope=true
+
+quarkus.index-dependency.i3-annotations.group-id=org.quarkus.irccs
+quarkus.index-dependency.i3-annotations.artifact-id=i3-annotations
+
+quarkus.log.category."org.jboss.resteasy.reactive.common.core.AbstractResteasyReactiveContext".level=DEBUG
+#irccs-client-db.url = bolt://localhost:7687
+#irccs-client-db.username = neo4j
+#irccs-client-db.username = neo4j
+#irccs-client-db.password = test
+
+#test port
+quarkus.http.test-port=8083
+quarkus.http.test-ssl-port=8446
+quarkus.log.level=WARN
+quarkus.http.test-timeout=30s
 
 #necessario per i test sul container devservices di hapi fhir jpa
 quarkus.http.test-timeout=120s
