--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -70,12 +70,14 @@ quarkus.keycloak.policy-enforcer.paths.2.path=/fhir/auth/users/logout
 quarkus.keycloak.policy-enforcer.paths.3.path=/fhir/auth/users/forgotPassword
 quarkus.keycloak.policy-enforcer.paths.4.path=/fhir/auth/users/updatePassword
 quarkus.keycloak.policy-enforcer.paths.5.path=/fhir/auth/users/me
+quarkus.keycloak.policy-enforcer.paths.6.path=/fhir/auth/users/organizations
 quarkus.keycloak.policy-enforcer.paths.0.enforcement-mode=DISABLED
 quarkus.keycloak.policy-enforcer.paths.1.enforcement-mode=DISABLED
 quarkus.keycloak.policy-enforcer.paths.2.enforcement-mode=DISABLED
 quarkus.keycloak.policy-enforcer.paths.3.enforcement-mode=DISABLED
 quarkus.keycloak.policy-enforcer.paths.4.enforcement-mode=DISABLED
 quarkus.keycloak.policy-enforcer.paths.5.enforcement-mode=DISABLED
+quarkus.keycloak.policy-enforcer.paths.6.enforcement-mode=DISABLED
 quarkus.keycloak.policy-enforcer.http-method-as-scope=true
 
 #necessario per i test sul container devservices di hapi fhir jpa
