--- a/DockerfileK
+++ b/DockerfileK
@@ -8,6 +8,8 @@ RUN echo '#!/bin/sh' > /app/start.sh && \
     echo 'echo "Starting application..."' >> /app/start.sh && \
     echo 'java -jar /app/quarkus-run.jar' >> /app/start.sh && \
     echo 'echo "Application exited."' >> /app/start.sh
+
+RUN dos2unix /app/start.sh    
 RUN chmod +x /app/start.sh
 
 
