--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -63,7 +63,7 @@ quarkus.oidc.credentials.secret=${keycloak-client_secret}
 quarkus.oidc.tls.verification=none
 quarkus.oidc.devui.web-client-timeout=10000
 quarkus.oidc.authentication.verify-access-token=false
-
+quarkus.oidc.authentication.id-token-required=false
 # Enable Policy Enforcement
 quarkus.keycloak.policy-enforcer.enable=true
 quarkus.keycloak.policy-enforcer.paths.0.path=/fhir/auth/users/signup
