--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.quarkus</groupId>
   <artifactId>quarkus-project</artifactId>
-  <version>1.0.0</version>
+  <version>1.1.0</version>
   <properties>
     <hapi.version>7.4.3</hapi.version>
-    <i3.common.version>2.0.4-SNAPSHOT</i3.common.version>
+    <i3.common.version>2.1.0-SNAPSHOT</i3.common.version>
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
     <maven.home>${user.home}/.m2/settings.xml</maven.home>
@@ -82,7 +82,7 @@
     <dependency>
       <groupId>org.hapi</groupId>
       <artifactId>hapi-devservice</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>${i3.common.version}</version>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
